samples/_failures_safe/1761426708_969cdc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc39449a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_fc39449a.c:159:35: error: expected ‘;’ at end of input
  159 |         tokens[token_count].column
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_fc39449a.c:159:9: error: expected declaration or statement at end of input
  159 |         tokens[token_count].column
      |         ^~~~~~
./samples/SAFE/__tmp_fc39449a.c:159:9: error: expected declaration or statement at end of input
